Bug 306862 - KMail crashes when trying to move messages
Summary: KMail crashes when trying to move messages
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-15 20:45 UTC by Mikolaj Machowski
Modified: 2012-09-15 22:57 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mikolaj Machowski 2012-09-15 20:45:22 UTC
Application: kmail (4.10 pre)
KDE Platform Version: 4.9.90 (Compiled from sources)
Qt Version: 4.8.3
Operating System: Linux 2.6.36.2-desktop586-2mnb i686
Distribution: "Mandriva Linux 2010.2"

-- Information about the crash:
- What I was doing when the application crashed:
KMail crashed each time when trying to move messages. Crashed on drag'n'drop, keyboard shortcuts, menus.

The crash can be reproduced every time.

-- Backtrace:
Application: KMail (kmail), signal: Segmentation fault
[Current thread is 1 (Thread 0xaf1666f0 (LWP 25886))]

Thread 3 (Thread 0xaca1bb70 (LWP 25894)):
#0  0xffffe430 in __kernel_vsyscall ()
#1  0xb593ac75 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/i686/libpthread.so.0
#2  0xb2fa4113 in WTF::TCMalloc_PageHeap::scavengerThread() () from /home/mikolaj/qt4/lib/libQtWebKit.so.4
#3  0xb2fa380d in WTF::TCMalloc_PageHeap::runScavengerThread(void*) () from /home/mikolaj/qt4/lib/libQtWebKit.so.4
#4  0xb1b6cbe8 in ?? () from /usr/lib/libGL.so.1

Thread 2 (Thread 0xac0ecb70 (LWP 25895)):
#0  0xb18c3036 in clock_gettime () from /lib/i686/librt.so.1
#1  0xb5a56cd7 in do_gettime (sec=0xac0ebf38, frac=0xac0ebf30) at /home/mikolaj/kdesrc/qt/src/corelib/tools/qelapsedtimer_unix.cpp:123
#2  0xb5a56d5a in qt_gettime () at /home/mikolaj/kdesrc/qt/src/corelib/tools/qelapsedtimer_unix.cpp:140
#3  0xb5b5eb73 in QTimerInfoList::updateCurrentTime (this=0x946841c) at /home/mikolaj/kdesrc/qt/src/corelib/kernel/qeventdispatcher_unix.cpp:343
#4  0xb5b5eefb in QTimerInfoList::timerWait (this=0x946841c, tm=...) at /home/mikolaj/kdesrc/qt/src/corelib/kernel/qeventdispatcher_unix.cpp:450
#5  0xb5b5b0f3 in timerSourcePrepareHelper (src=0x94683e8, timeout=0xac0ec07c) at /home/mikolaj/kdesrc/qt/src/corelib/kernel/qeventdispatcher_glib.cpp:136
#6  0xb5b5b25e in timerSourcePrepare (source=0x94683e8, timeout=0xac0ec07c) at /home/mikolaj/kdesrc/qt/src/corelib/kernel/qeventdispatcher_glib.cpp:169
#7  0xb18221e1 in g_main_context_prepare () from /usr/lib/libglib-2.0.so.0
#8  0xb18225c9 in ?? () from /usr/lib/libglib-2.0.so.0
#9  0xb1822b9e in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#10 0xb5b5c52a in QEventDispatcherGlib::processEvents (this=0x9197a48, flags=...) at /home/mikolaj/kdesrc/qt/src/corelib/kernel/qeventdispatcher_glib.cpp:426
#11 0xb5b1c11f in QEventLoop::processEvents (this=0xac0ec218, flags=...) at /home/mikolaj/kdesrc/qt/src/corelib/kernel/qeventloop.cpp:149
#12 0xb5b1c292 in QEventLoop::exec (this=0xac0ec218, flags=...) at /home/mikolaj/kdesrc/qt/src/corelib/kernel/qeventloop.cpp:204
#13 0xb59e8021 in QThread::exec (this=0x9197918) at /home/mikolaj/kdesrc/qt/src/corelib/thread/qthread.cpp:501
#14 0xb59e81b5 in QThread::run (this=0x9197918) at /home/mikolaj/kdesrc/qt/src/corelib/thread/qthread.cpp:568
#15 0xb59eaab3 in QThreadPrivate::start (arg=0x9197918) at /home/mikolaj/kdesrc/qt/src/corelib/thread/qthread_unix.cpp:307
#16 0xb1b6cbe8 in ?? () from /usr/lib/libGL.so.1

Thread 1 (Thread 0xaf1666f0 (LWP 25886)):
[KCrash Handler]
#7  QSharedDataPointer (one=..., other=...) at /home/mikolaj/qt4/include/QtCore/qshareddata.h:93
#8  assignEntityPrivate (one=..., other=...) at /home/mikolaj/kdesrc/kde/kdepimlibs/akonadi/entity.cpp:49
#9  0xb62b7b6a in Akonadi::Entity::Entity (this=0xbfc4bb78, other=...) at /home/mikolaj/kdesrc/kde/kdepimlibs/akonadi/entity.cpp:56
#10 0xb62ed194 in Akonadi::Collection::Collection (this=0xbfc4bb78, other=...) at /home/mikolaj/kdesrc/kde/kdepimlibs/akonadi/collection.cpp:72
#11 0xb413602c in MailCommon::FolderCollection::collection (this=0x0) at /home/mikolaj/kdesrc/kde/kdepim/mailcommon/foldercollection.cpp:150
#12 0xb6f65bce in KMMainWidget::trashMessageSelected (this=0x93a1c18, ref=1) at /home/mikolaj/kdesrc/kde/kdepim/kmail/kmmainwidget.cpp:2200
#13 0xb6f65da1 in KMMainWidget::slotTrashSelectedMessages (this=0x93a1c18) at /home/mikolaj/kdesrc/kde/kdepim/kmail/kmmainwidget.cpp:2232
#14 0xb6f7dd4a in KMMainWidget::qt_static_metacall (_o=0x93a1c18, _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0xbfc4bd08) at /home/mikolaj/kdesrc/build/kde/kdepim/kmail/kmmainwidget.moc:338
#15 0xb5b3d71e in QMetaObject::activate (sender=0x9563228, m=0xb59092c8, local_signal_index=1, argv=0xbfc4bd08) at /home/mikolaj/kdesrc/qt/src/corelib/kernel/qobject.cpp:3547
#16 0xb4d86fba in QAction::triggered (this=0x9563228, _t1=false) at .moc/debug-shared/moc_qaction.cpp:277
#17 0xb4d86401 in QAction::activate (this=0x9563228, event=QAction::Trigger) at /home/mikolaj/kdesrc/qt/src/gui/kernel/qaction.cpp:1257
#18 0xb531d4da in QMenuPrivate::activateCausedStack (this=0x9607908, causedStack=..., action=0x9563228, action_e=QAction::Trigger, self=true) at /home/mikolaj/kdesrc/qt/src/gui/widgets/qmenu.cpp:1028
#19 0xb531d937 in QMenuPrivate::activateAction (this=0x9607908, action=0x9563228, action_e=QAction::Trigger, self=true) at /home/mikolaj/kdesrc/qt/src/gui/widgets/qmenu.cpp:1120
#20 0xb5322376 in QMenu::mouseReleaseEvent (this=0x96078e8, e=0xbfc4c69c) at /home/mikolaj/kdesrc/qt/src/gui/widgets/qmenu.cpp:2360
#21 0xb76995e5 in KMenu::mouseReleaseEvent (this=0x96078e8, e=0xbfc4c69c) at /home/mikolaj/kdesrc/kde/kdelibs/kdeui/widgets/kmenu.cpp:464
#22 0xb4e04094 in QWidget::event (this=0x96078e8, event=0xbfc4c69c) at /home/mikolaj/kdesrc/qt/src/gui/kernel/qwidget.cpp:8371
#23 0xb5322a1f in QMenu::event (this=0x96078e8, e=0xbfc4c69c) at /home/mikolaj/kdesrc/qt/src/gui/widgets/qmenu.cpp:2469
#24 0xb4d97ce4 in QApplicationPrivate::notify_helper (this=0x90a8c30, receiver=0x96078e8, e=0xbfc4c69c) at /home/mikolaj/kdesrc/qt/src/gui/kernel/qapplication.cpp:4557
#25 0xb4d95db2 in QApplication::notify (this=0xbfc4e42c, receiver=0x96078e8, e=0xbfc4c69c) at /home/mikolaj/kdesrc/qt/src/gui/kernel/qapplication.cpp:4100
#26 0xb75a914a in KApplication::notify (this=0xbfc4e42c, receiver=0x96078e8, event=0xbfc4c69c) at /home/mikolaj/kdesrc/kde/kdelibs/kdeui/kernel/kapplication.cpp:311
#27 0xb5b1f4f1 in QCoreApplication::notifyInternal (this=0xbfc4e42c, receiver=0x96078e8, event=0xbfc4c69c) at /home/mikolaj/kdesrc/qt/src/corelib/kernel/qcoreapplication.cpp:915
#28 0xb4d9a6d7 in QCoreApplication::sendSpontaneousEvent (receiver=0x96078e8, event=0xbfc4c69c) at ../../include/QtCore/../../../../qt/src/corelib/kernel/qcoreapplication.h:234
#29 0xb4d9441f in QApplicationPrivate::sendMouseEvent (receiver=0x96078e8, event=0xbfc4c69c, alienWidget=0x0, nativeWidget=0x96078e8, buttonDown=0xb592eac0, lastMouseReceiver=..., spontaneous=true)
    at /home/mikolaj/kdesrc/qt/src/gui/kernel/qapplication.cpp:3166
#30 0xb4e3e00a in QETWidget::translateMouseEvent (this=0x96078e8, event=0xbfc4cc90) at /home/mikolaj/kdesrc/qt/src/gui/kernel/qapplication_x11.cpp:4441
#31 0xb4e3ae68 in QApplication::x11ProcessEvent (this=0xbfc4e42c, event=0xbfc4cc90) at /home/mikolaj/kdesrc/qt/src/gui/kernel/qapplication_x11.cpp:3508
#32 0xb4e742e9 in x11EventSourceDispatch (s=0x9094be0, callback=0, user_data=0x0) at /home/mikolaj/kdesrc/qt/src/gui/kernel/qguieventdispatcher_glib.cpp:146
#33 0xb181ecbe in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#34 0xb18229f8 in ?? () from /usr/lib/libglib-2.0.so.0
#35 0xb1822b9e in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#36 0xb5b5c50a in QEventDispatcherGlib::processEvents (this=0x9053eb8, flags=...) at /home/mikolaj/kdesrc/qt/src/corelib/kernel/qeventdispatcher_glib.cpp:424
#37 0xb4e7491e in QGuiEventDispatcherGlib::processEvents (this=0x9053eb8, flags=...) at /home/mikolaj/kdesrc/qt/src/gui/kernel/qguieventdispatcher_glib.cpp:204
#38 0xb5b1c11f in QEventLoop::processEvents (this=0xbfc4cf40, flags=...) at /home/mikolaj/kdesrc/qt/src/corelib/kernel/qeventloop.cpp:149
#39 0xb5b1c292 in QEventLoop::exec (this=0xbfc4cf40, flags=...) at /home/mikolaj/kdesrc/qt/src/corelib/kernel/qeventloop.cpp:204
#40 0xb5320fc6 in QMenu::exec (this=0x96078e8, p=..., action=0x0) at /home/mikolaj/kdesrc/qt/src/gui/widgets/qmenu.cpp:2113
#41 0xb428ce73 in MessageList::Widget::viewMessageListContextPopupRequest (this=0x93e7988, selectedItems=..., globalPos=...) at /home/mikolaj/kdesrc/kde/kdepim/messagelist/widget.cpp:290
#42 0xb425e4c8 in MessageList::Core::View::mousePressEvent (this=0x942bb60, e=0xbfc4db5c) at /home/mikolaj/kdesrc/kde/kdepim/messagelist/core/view.cpp:2181
#43 0xb4e04076 in QWidget::event (this=0x942bb60, event=0xbfc4db5c) at /home/mikolaj/kdesrc/qt/src/gui/kernel/qwidget.cpp:8367
#44 0xb52ca1ac in QFrame::event (this=0x942bb60, e=0xbfc4db5c) at /home/mikolaj/kdesrc/qt/src/gui/widgets/qframe.cpp:557
#45 0xb537c87f in QAbstractScrollArea::viewportEvent (this=0x942bb60, e=0xbfc4db5c) at /home/mikolaj/kdesrc/qt/src/gui/widgets/qabstractscrollarea.cpp:1043
#46 0xb543d1b1 in QAbstractItemView::viewportEvent (this=0x942bb60, event=0xbfc4db5c) at /home/mikolaj/kdesrc/qt/src/gui/itemviews/qabstractitemview.cpp:1644
#47 0xb5489585 in QTreeView::viewportEvent (this=0x942bb60, event=0xbfc4db5c) at /home/mikolaj/kdesrc/qt/src/gui/itemviews/qtreeview.cpp:1257
#48 0xb537d485 in QAbstractScrollAreaPrivate::viewportEvent (this=0x946ce90, event=0xbfc4db5c) at /home/mikolaj/kdesrc/qt/src/gui/widgets/qabstractscrollarea_p.h:100
#49 0xb537d56c in QAbstractScrollAreaFilter::eventFilter (this=0x94242c8, o=0x93e59f0, e=0xbfc4db5c) at /home/mikolaj/kdesrc/qt/src/gui/widgets/qabstractscrollarea_p.h:116
#50 0xb5b1f765 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=0x90a8c30, receiver=0x93e59f0, event=0xbfc4db5c) at /home/mikolaj/kdesrc/qt/src/corelib/kernel/qcoreapplication.cpp:1025
#51 0xb4d97cc0 in QApplicationPrivate::notify_helper (this=0x90a8c30, receiver=0x93e59f0, e=0xbfc4db5c) at /home/mikolaj/kdesrc/qt/src/gui/kernel/qapplication.cpp:4553
#52 0xb4d95db2 in QApplication::notify (this=0xbfc4e42c, receiver=0x93e59f0, e=0xbfc4db5c) at /home/mikolaj/kdesrc/qt/src/gui/kernel/qapplication.cpp:4100
#53 0xb75a914a in KApplication::notify (this=0xbfc4e42c, receiver=0x93e59f0, event=0xbfc4db5c) at /home/mikolaj/kdesrc/kde/kdelibs/kdeui/kernel/kapplication.cpp:311
#54 0xb5b1f4f1 in QCoreApplication::notifyInternal (this=0xbfc4e42c, receiver=0x93e59f0, event=0xbfc4db5c) at /home/mikolaj/kdesrc/qt/src/corelib/kernel/qcoreapplication.cpp:915
#55 0xb4d9a6d7 in QCoreApplication::sendSpontaneousEvent (receiver=0x93e59f0, event=0xbfc4db5c) at ../../include/QtCore/../../../../qt/src/corelib/kernel/qcoreapplication.h:234
#56 0xb4d9441f in QApplicationPrivate::sendMouseEvent (receiver=0x93e59f0, event=0xbfc4db5c, alienWidget=0x93e59f0, nativeWidget=0x93a1c18, buttonDown=0xb592eac0, lastMouseReceiver=..., spontaneous=
    true) at /home/mikolaj/kdesrc/qt/src/gui/kernel/qapplication.cpp:3166
#57 0xb4e3e2e4 in QETWidget::translateMouseEvent (this=0x93a1c18, event=0xbfc4e090) at /home/mikolaj/kdesrc/qt/src/gui/kernel/qapplication_x11.cpp:4507
#58 0xb4e3ae68 in QApplication::x11ProcessEvent (this=0xbfc4e42c, event=0xbfc4e090) at /home/mikolaj/kdesrc/qt/src/gui/kernel/qapplication_x11.cpp:3508
#59 0xb4e742e9 in x11EventSourceDispatch (s=0x9094be0, callback=0, user_data=0x0) at /home/mikolaj/kdesrc/qt/src/gui/kernel/qguieventdispatcher_glib.cpp:146
#60 0xb181ecbe in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#61 0xb18229f8 in ?? () from /usr/lib/libglib-2.0.so.0
#62 0xb1822b9e in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#63 0xb5b5c50a in QEventDispatcherGlib::processEvents (this=0x9053eb8, flags=...) at /home/mikolaj/kdesrc/qt/src/corelib/kernel/qeventdispatcher_glib.cpp:424
#64 0xb4e7491e in QGuiEventDispatcherGlib::processEvents (this=0x9053eb8, flags=...) at /home/mikolaj/kdesrc/qt/src/gui/kernel/qguieventdispatcher_glib.cpp:204
#65 0xb5b1c11f in QEventLoop::processEvents (this=0xbfc4e33c, flags=...) at /home/mikolaj/kdesrc/qt/src/corelib/kernel/qeventloop.cpp:149
#66 0xb5b1c292 in QEventLoop::exec (this=0xbfc4e33c, flags=...) at /home/mikolaj/kdesrc/qt/src/corelib/kernel/qeventloop.cpp:204
#67 0xb5b1fb79 in QCoreApplication::exec () at /home/mikolaj/kdesrc/qt/src/corelib/kernel/qcoreapplication.cpp:1187
#68 0xb4d950e4 in QApplication::exec () at /home/mikolaj/kdesrc/qt/src/gui/kernel/qapplication.cpp:3818
#69 0x0804a626 in main (argc=3, argv=0xbfc4e5e4) at /home/mikolaj/kdesrc/kde/kdepim/kmail/main.cpp:145

Possible duplicates by query: bug 301647, bug 301110, bug 295546, bug 292983, bug 290342.

Reported using DrKonqi
Comment 1 Mikolaj Machowski 2012-09-15 20:50:54 UTC
Few additional informations:

Those were first few attempts to move messages after start of system . After third (or fourth) crash decided to file a report. After next start-up of kmail it works. Maybe akonadi didn't initialized properly or something like that?
Comment 2 Allen Winter 2012-09-15 22:57:37 UTC
Git commit 4dd6719050dc376d0789ceb0d2813381778e0a67 by Allen Winter.
Committed on 16/09/2012 at 00:56.
Pushed by winterz into branch 'KDE/4.9'.

in trashMessageSelected(), don't crash if there is no currentFolder.
FIXED-IN: 4.9.2

M  +6    -2    kmail/kmmainwidget.cpp

http://commits.kde.org/kdepim/4dd6719050dc376d0789ceb0d2813381778e0a67