in trashMessageSelected(), don't crash if there is no currentFolder.

BUG: 306862
FIXED-IN: 4.9.2